[package]
name = "bumbling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.37", features = ["ttf"] }
curl = "0.4.46"
html5ever = "0.27.0"
markup5ever_rcdom = "0.3.0"
rand = "0.8.5"
chrono = "0.4.38"
chrono-tz = "=0.9.0"
regex = "1.10.5"

#dev_tools = { path = "dev_tools" }
